# qc

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/app/: CompilerApplication.cpp  CompilerApplication.h
src/collectors/: Collector.h  ReverseBfsChildrenCollector.cpp  ReverseBfsChildrenCollector.h
src/common/: ExpressionVisitor.h  Expressions.cpp  Expressions.h  ProgramMetadata.h
src/det_parser/: DeterminantParser.cpp  DeterminantParser.h  NodeParser.cpp  NodeParser.h  ParserUtils.cpp  ParserUtils.h
src/memory_mapper/: MemoryMapper.h  NaiveMemoryMapper.cpp  NaiveMemoryMapper.h
src/meta_parser/: YamlMetadataParser.cpp  YamlMetadataParser.h
src/program_writer/: CommandSerializer.h  ProgramFileWriterV1.cpp  ProgramFileWriterV1.h
src/utils/: LinkedHashMap.h  LinkedHashSet.h
test/: CMakeLists.txt
test/resources/app/: input.txt  metadata.yaml
test/resources/app/zhordan/: input.txt  metadata.yaml
test/resources/det_parser/: determinant.txt  single_conditional_term.txt  single_nonconditional_term.txt
test/resources/det_parser/expressions/: nested_expression.json  variable_and_literals.json
test/resources/det_parser/expressions/operators/: abs_operator.json  add_operator.json  and_operator.json  div_operator.json  eq_operator.json  ge_operator.json  gt_operator.json  le_operator.json  lt_operator.json  mul_operator.json  ne_operator.json  neg_operator.json  or_operator.json  sqrt_operator.json  sub_operator.json
test/resources/meta_parser/: program-meta-without-params.yaml  program-meta.yaml
test/src/: CMakeLists.txt
test/src/app/: app_test.cpp
test/src/collectors/: reverse_bfs_children_collector_test.cpp
test/src/det_parser/: det_parser_test.cpp
test/src/memory_mapper/: naive_memory_mapper_test.cpp
test/src/meta_parser/: yaml_metadata_parser_test.cpp
